--- a/local-arrangements/index.html
+++ b/local-arrangements/index.html
@@ -5,5 +5,6 @@ sitemap:
 priority: 1.0
 changefreq: weekly
 lastmod: 2019-02-22
+permalink: /local-arrangements/
 ---
 <p>Details on local arrangements are forthcoming.</p>
