--- a/local-arrangements.html
+++ b/local-arrangements.html
@@ -3,4 +3,12 @@ layout: page
 title: Local Arrangements
 permalink: /local-arrangements/
 ---
-<p>Details on local arrangements are forthcoming.</p>
+
+<h2>{{ page.title }}</h2>
+<br >
+<h3>Workshop Location</h3>
+<p>The 2019 workshop will be held at <a href="http://msvu.ca">Mount Saint Vincent University</a>. Mount Saint Vincent University overlooks the Bedford Basin in Halifax, Nova Scotia. Situated on a park-like campus in the centre of the Halifax Regional Municipality, the Mount is just minutes from the heart of downtown Halifax.</p>
+
+<--!
+     <h3>Transit Options</h3>
+-->
