--- a/local-arrangements.html
+++ b/local-arrangements.html
@@ -7,8 +7,18 @@ permalink: /local-arrangements/
 <h2>{{ page.title }}</h2>
 <br >
 <h3>Workshop Location</h3>
-<p>The 2019 workshop will be held at <a href="http://msvu.ca">Mount Saint Vincent University</a>. Mount Saint Vincent University overlooks the Bedford Basin in Halifax, Nova Scotia. Situated on a park-like campus in the centre of the Halifax Regional Municipality, the Mount is just minutes from the heart of downtown Halifax.</p>
+<p>The 2019 workshop will be held at <a href="http://msvu.ca">Mount Saint Vincent University</a>, which overlooks the Bedford Basin in Halifax, Nova Scotia. Situated on a park-like campus in the centre of the Halifax Regional Municipality, the Mount is just minutes from the heart of downtown Halifax.</p>
 
-<!--
+
      <h3>Transit Options</h3>
--->
+          <h4>Airport Transfers</h4>
+               <ul>
+<li><a href="https://driverdaves.com/">Driver Dave's</a>: the lowest cost option from the airport that doesn't involve taking a bus. Group rates from $20, or $35 for an individual. They also arrange for other tours if you're staying for a longer trip.</li>
+<li><a href="https://www.casinotaxi.ca/">Casino Taxi</a>: standard taxi service. Trips to an from the airport may cost over $60. Call to get an estimate.</li>
+<li><a href="http://ladydriveher.com/">Lady Drive Her</a>: standard airport taxi service with all-women drivers. Rate is $64 to downtown Halifax.</li>
+<li><a href="https://maritimebus.com/halifax-airport-shuttle/>Maritime Bus Airport Shuttle</a>: service from the airport to downtown Halifax. $22 one-way or $40 round trip. Book in advance.</li>
+<li><a href="https://www.halifax.ca/transportation/halifax-transit/routes-schedules/metrox-service">Halifax Transit MetroX: service to and from the Airport with a few stops in between. Cash fare is $3.50. Schedules available online.</li>
+               </ul>
+
+
+
