--- a/local-arrangements.html
+++ b/local-arrangements.html
@@ -16,7 +16,7 @@ permalink: /local-arrangements/
 <li><a href="https://driverdaves.com/">Driver Dave's</a>: the lowest cost option from the airport that doesn't involve taking a bus. Group rates from $20, or $35 for an individual. They also arrange for other tours if you're staying for a longer trip.</li>
 <li><a href="https://www.casinotaxi.ca/">Casino Taxi</a>: standard taxi service. Trips to an from the airport may cost over $60. Call to get an estimate.</li>
 <li><a href="http://ladydriveher.com/">Lady Drive Her</a>: standard airport taxi service with all-women drivers. Rate is $64 to downtown Halifax.</li>
-<li><a href="https://maritimebus.com/halifax-airport-shuttle/>Maritime Bus Airport Shuttle</a>: service from the airport to downtown Halifax. $22 one-way or $40 round trip. Book in advance.</li>
+<li><a href="https://maritimebus.com/halifax-airport-shuttle/">Maritime Bus Airport Shuttle</a>: service from the airport to downtown Halifax. $22 one-way or $40 round trip. Book in advance.</li>
 <li><a href="https://www.halifax.ca/transportation/halifax-transit/routes-schedules/metrox-service">Halifax Transit MetroX: service to and from the Airport with a few stops in between. Cash fare is $3.50. Schedules available online.</li>
                </ul>
 
