--- a/404.html
+++ b/404.html
@@ -1,10 +1,7 @@
 ---
-layout: default
-title: Error 404
+layout: post
+title: 404!
 ---
-<div id="home" class="grid post">
-<div class="unit whole">
-	<h1>Sorry. Looks like the bit you requested does not exist.</h1>
-	<p style="text-align:center"><a href="/">Go back</a></p>
-</div>
-</div>
+
+
+Page not found.
